# check-supplychain

./: CLAUDE.md  README.md  pyproject.toml
check_supplychain/: __main__.py  version_spec.py
check_supplychain/scanners/: __init__.py  brew_scanner.py  npm_scanner.py  python_scanner.py
docs/superpowers/plans/: 2026-03-31-parameterize-scanners.md
docs/superpowers/specs/: 2026-03-31-parameterize-scanners-design.md
tests/: test_brew_scanner.py  test_cli.py  test_npm_scanner.py  test_python_scanner.py  test_version_spec.py
