[project]
name = "check-supplychain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jediah Logiodice", email = "jediah@logiodice.com" }
]
requires-python = ">=3.12"
dependencies = [
    "packaging>=26.0",
]

[tool.uv]
managed = true

[tool.uv.build-backend]
module-name = "check_supplychain"
module-root = ""

[tool.uv.sources]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

